Add Edge Deployment file, script

--- a/standalone/roles/kubernetes-apps/ansible/templates/nodelocaldns-second-daemonset.yml.j2
+++ b/standalone/roles/kubernetes-apps/ansible/templates/nodelocaldns-second-daemonset.yml.j2
@@ -18,6 +18,13 @@ spec:
         prometheus.io/scrape: 'true'
         prometheus.io/port: '{{ nodelocaldns_secondary_prometheus_port }}'
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: node-role.kubernetes.io/edge
+                operator: DoesNotExist
       nodeSelector:
         {{ nodelocaldns_ds_nodeselector }}
       priorityClassName: system-cluster-critical
