--- a/standalone/roles/kubernetes-apps/metallb/templates/metallb.yaml.j2
+++ b/standalone/roles/kubernetes-apps/metallb/templates/metallb.yaml.j2
@@ -1810,6 +1810,13 @@ spec:
         app: metallb
         component: speaker
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: node-role.kubernetes.io/edge
+                operator: DoesNotExist
       containers:
       - args:
         - --port={{ metallb_port }}
